--- a/web/templates/layout/app.html.eex
+++ b/web/templates/layout/app.html.eex
@@ -34,7 +34,7 @@
     </div>
 
     <!-- Begin page content -->
-    <%= @inner %>
+    <%= render @view_module, @view_template, assigns %>
 
     <script src="<%= static_path(@conn, "/js/app.js") %>"></script>
     <script>require("web/static/js/app")</script>
